--- a/Three-Essential-Digital-Marketing-Channels-In-2020.html
+++ b/Three-Essential-Digital-Marketing-Channels-In-2020.html
@@ -55,7 +55,7 @@
 	<body class="preloader cursor-anim-enable landing-page">
 		<!-- preloader-loading start -->
 		<div class="preloader__logoload-box">
-			<img class="preloader__logo" src="assets/images/logo/logo-white.png" alt="logo">
+			<img class="preloader__logo" src="assets/images/logo/logo-white.png" loading="lazy" alt="logo">
 			<div class="preloader__pulse"></div>
 		</div><!-- preloader-loading end -->
 
@@ -114,8 +114,8 @@
 			<div class="header-logo js-midnight-color js-headroom">
 				<div class="hidden-box">
 					<a href="index.html" class="header-logo__box js-pointer-large js-animsition-link">
-						<img class="header-logo__img white" src="assets/images/logo/logo-white.png" alt="logo">
-						<img class="header-logo__img black" src="assets/images/logo/logo-black.png" alt="logo">
+						<img class="header-logo__img white" src="assets/images/logo/logo-white.png" loading="lazy" alt="logo">
+						<img class="header-logo__img black" src="assets/images/logo/logo-black.png" loading="lazy" alt="logo">
 					</a>
 				</div>
 			</div><!-- logo end -->
@@ -401,7 +401,7 @@
 								<a href="#" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
-											<img class="img-hover-scale" src="https://images.pexels.com/photos/2764678/pexels-photo-2764678.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="DM-channels-in-2020">
+											<img class="img-hover-scale" src="https://images.pexels.com/photos/2764678/pexels-photo-2764678.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" loading="lazy" alt="DM-channels-in-2020">
 											<!-- <img class="img-hover-scale" src="assets/images/posts/modern-design/photo-of-man-jumping-on-pavement-3329728-2.jpg" alt="Post"> -->
 										</div>
 									</div>
@@ -474,7 +474,7 @@
 								<a href="#0" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
-											<img class="img-hover-scale" src="https://images.unsplash.com/photo-1491951931722-5a446214b4e2?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Mnx8c29jaWFsJTIwbWVkaWF8ZW58MHwxfDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="DM-channels-in-2020">
+											<img class="img-hover-scale" src="https://images.unsplash.com/photo-1491951931722-5a446214b4e2?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Mnx8c29jaWFsJTIwbWVkaWF8ZW58MHwxfDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" loading="lazy" alt="DM-channels-in-2020">
 										</div>
 									</div>
 								</a>
@@ -487,7 +487,7 @@
 								<a href="#0" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
-											<img class="img-hover-scale" src="assets/images/posts/photo-studio/black-sony-dslr-camera-with-telephoto-lens-and-tripod-1447264.jpg" alt="DM-channels-in-2020">
+											<img class="img-hover-scale" src="assets/images/posts/photo-studio/black-sony-dslr-camera-with-telephoto-lens-and-tripod-1447264.jpg" loading="lazy" alt="DM-channels-in-2020">
 										</div>
 									</div>
 								</a>
@@ -605,7 +605,7 @@
 				<div class="container padding-top-bottom-120">
 					<!-- footer-logo start -->
 					<div class="footer-logo footer-logo-desktop-hidden padding-bottom-90">
-						<img class="footer-logo__img" src="assets/images/logo/logo-white.png" alt="logo">
+						<img class="footer-logo__img" src="assets/images/logo/logo-white.png" loading="lazy" alt="logo">
 					</div><!-- footer-logo end -->
 
 					<!-- flex-container start -->
