--- a/contact.html
+++ b/contact.html
@@ -412,6 +412,34 @@
 								</div>
 							</div><!-- column end -->
 							<!-- column start -->
+							<!-- <div class="two-columns column-50-100 padding-top-60">
+								<div class="column-r-margin-20 js-scrollanim">
+									<p class="headline-xxxxs anim-text-double-fill invert" data-text="Visit us">Visit us</p>
+									<h6 class="list list_margin-1px padding-top-20 text-color-b0b0b0">
+										<span class="list__item">
+											<span class="d-inline-block hidden-box">
+												<span class="subhead-xxs anim-reveal tr-delay-01">	Murthy layout</span>
+											</span>
+										</span>
+										<span class="list__item">
+											<span class="d-inline-block hidden-box">
+												<span class="subhead-xxs anim-reveal tr-delay-02">Defence enclave</span>
+											</span>
+										</span>
+										<span class="list__item">
+											<span class="d-inline-block hidden-box">
+												<span class="subhead-xxs anim-reveal tr-delay-03">k narayanpura cross</span>
+											</span>
+										</span>
+									</h6>
+									<div class="padding-top-10 anim-fade tr-delay-04">
+										<a href="https://g.page/dax-ads-kannur?share" target="_blank"  class="subhead-xxs text-color-dadada text-hover-to-red js-pointer-small">Open in google maps</a>
+									</div>
+								</div>
+							</div> -->
+							<!-- column end -->
+
+							<!-- column start -->
 							<div class="four-columns column-50-100 padding-top-60">
 								<div class="column-r-margin-20 js-scrollanim">
 									<p class="headline-xxxxs anim-text-double-fill invert" data-text="Email us">Email us</p>
