--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 		<!-- preloader-loading start -->
 		<div class="preloader__logoload-box">
-			<img class="preloader__logo" src="assets/images/logo/logo-white.png" alt="logo">
+			<img class="preloader__logo" src="assets/images/logo/logo-white.png" loading="lazy" alt="logo" >
 			<div class="preloader__pulse"></div>
 		</div><!-- preloader-loading end -->
 
@@ -133,8 +133,8 @@
 			<div class="header-logo js-midnight-color js-headroom">
 				<div class="hidden-box">
 					<a href="index.html" class="header-logo__box js-pointer-large js-animsition-link">
-						<img class="header-logo__img white" src="assets/images/logo/logo-white.png" alt="logo">
-						<img class="header-logo__img black" src="assets/images/logo/logo-black.png" alt="logo">
+						<img class="header-logo__img white" src="assets/images/logo/logo-white.png" loading="lazy" alt="logo">
+						<img class="header-logo__img black" src="assets/images/logo/logo-black.png" loading="lazy" alt="logo">
 					</a>
 				</div>
 			</div><!-- logo end -->
@@ -534,50 +534,50 @@
 						<div class="swiper-wrapper">
 							<!-- swiper-slide start -->
 							<div class="swiper-slide">
-								<img src="assets/images/about/about_slider/people-holding-their-phones-3184435.jpg" alt="About us">
+								<img src="assets/images/about/about_slider/people-holding-their-phones-3184435.jpg" loading="lazy" alt="About us">
 							</div><!-- swiper-slide end -->
 
 							<!-- swiper-slide start -->
 							<div class="swiper-slide">
-								<img src="assets/images/about/about_slider/fashion-people-woman-girl-3979213.jpg" alt="About us">
-								<img class="padding-top-20" src="assets/images/about/about_slider/men-writing-on-board-3184633.jpg" alt="About us">
+								<img src="assets/images/about/about_slider/fashion-people-woman-girl-3979213.jpg" loading="lazy" alt="About us">
+								<img class="padding-top-20" src="assets/images/about/about_slider/men-writing-on-board-3184633.jpg" loading="lazy" alt="About us">
 							</div><!-- swiper-slide end -->
 
 							<!-- swiper-slide start -->
 							<div class="swiper-slide">
-								<img src="assets/images/about/about_slider/man-people-desk-laptop-3931391.jpg" alt="About us">
+								<img src="assets/images/about/about_slider/man-people-desk-laptop-3931391.jpg" loading="lazy" alt="About us">
 							</div><!-- swiper-slide end -->
 
 							<!-- swiper-slide start -->
 							<div class="swiper-slide">
-								<img src="assets/images/about/about_slider/photo-of-man-using-smartphone-3183191.jpg" alt="About us">
+								<img src="assets/images/about/about_slider/photo-of-man-using-smartphone-3183191.jpg" loading="lazy" alt="About us">
 							</div><!-- swiper-slide end -->
 
 							<!-- swiper-slide start -->
 							<div class="swiper-slide">
-								<img src="assets/images/about/about_slider/fashion-woman-girl-cute-3979116.jpg" alt="About us">
-								<img class="padding-top-20" src="assets/images/about/about_slider/fashion-man-people-school-3799830.jpg" alt="About us">
+								<img src="assets/images/about/about_slider/fashion-woman-girl-cute-3979116.jpg" loading="lazy" alt="About us">
+								<img class="padding-top-20" src="assets/images/about/about_slider/fashion-man-people-school-3799830.jpg" loading="lazy" alt="About us">
 							</div><!-- swiper-slide end -->
 
 							<!-- swiper-slide start -->
 							<div class="swiper-slide">
-								<img src="assets/images/about/about_slider/women-using-computers-3184348.jpg" alt="About us">
+								<img src="assets/images/about/about_slider/women-using-computers-3184348.jpg"loading="lazy"  alt="About us">
 							</div><!-- swiper-slide end -->
 
 							<!-- swiper-slide start -->
 							<div class="swiper-slide">
-								<img src="assets/images/about/about_slider/man-wearing-purple-long-sleeved-shirt-looking-at-the-ipad-3184326.jpg" alt="About us">
+								<img src="assets/images/about/about_slider/man-wearing-purple-long-sleeved-shirt-looking-at-the-ipad-3184326.jpg" loading="lazy" alt="About us">
 							</div><!-- swiper-slide end -->
 
 							<!-- swiper-slide start -->
 							<div class="swiper-slide">
-								<img src="assets/images/about/about_slider/women-s-white-framed-sunglasses-2690323.jpg" alt="About us">
-								<img class="padding-top-20" src="assets/images/about/about_slider/fashion-man-sunglasses-people-3965233.jpg" alt="About us">
+								<img src="assets/images/about/about_slider/women-s-white-framed-sunglasses-2690323.jpg" loading="lazy" alt="About us">
+								<img class="padding-top-20" src="assets/images/about/about_slider/fashion-man-sunglasses-people-3965233.jpg" loading="lazy" alt="About us">
 							</div><!-- swiper-slide end -->
 
 							<!-- swiper-slide start -->
 							<div class="swiper-slide">
-								<img src="assets/images/about/about_slider/fashion-woman-girl-cute-3979104.jpg" alt="About us">
+								<img src="assets/images/about/about_slider/fashion-woman-girl-cute-3979104.jpg" loading="lazy" alt="About us">
 							</div><!-- swiper-slide end -->
 						</div><!-- swiper-wrapper end -->
 					</div><!-- js-infinite-slider end -->
@@ -614,88 +614,88 @@
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/am.png" alt="Automagic">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/am-red.png" alt="Automagic">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/am.png" loading="lazy" alt="Automagic">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/am-red.png" loading="lazy" alt="Automagic">
 								</div>
 							</div><!-- clients-lines__column end -->
 
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/arm.png" alt="ARM">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/arm-red.png" alt="ARM">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/arm.png" loading="lazy" alt="ARM">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/arm-red.png" loading="lazy" alt="ARM">
 								</div>
 							</div><!-- clients-lines__column end -->
 
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/maithri.png" alt="Maithri">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/maithri-red.png" alt="Maithri">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/maithri.png" loading="lazy" alt="Maithri">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/maithri-red.png" loading="lazy" alt="Maithri">
 								</div>
 							</div><!-- clients-lines__column end -->
 
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/carclub.png" alt="Carclub">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/carclub-red.png" alt="Carclub">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/carclub.png" loading="lazy" alt="Carclub">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/carclub-red.png" loading="lazy" alt="Carclub">
 								</div>
 							</div><!-- clients-lines__column end -->
 
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/cnn.png" alt="CNN">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/cnn-red.png" alt="CNN">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/cnn.png" loading="lazy" alt="CNN">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/cnn-red.png" loading="lazy" alt="CNN">
 								</div>
 							</div><!-- clients-lines__column end -->
 
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/cpg.png" alt="CPG">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/cpg-red.png" alt="CPG">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/cpg.png" loading="lazy" alt="CPG">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/cpg-red.png" loading="lazy" alt="CPG">
 								</div>
 							</div><!-- clients-lines__column end -->
 
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/edu-wings.png" alt="Edu-wings">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/edu-wings-red.png" alt="Edu-wings">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/edu-wings.png" loading="lazy" alt="Edu-wings">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/edu-wings-red.png" loading="lazy" alt="Edu-wings">
 								</div>
 							</div><!-- clients-lines__column end -->
 
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/find-the-one.png" alt="find-the-one">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/find-the-one-red.png" alt="find-the-one">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/find-the-one.png" loading="lazy" alt="find-the-one">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/find-the-one-red.png" loading="lazy" alt="find-the-one">
 								</div>
 							</div><!-- clients-lines__column end -->
 
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/royal intl.png" alt="Royal-international">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/royal-red.png" alt="Royal-international">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/royal intl.png" loading="lazy" alt="Royal-international">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/royal-red.png" loading="lazy" alt="Royal-international">
 								</div>
 							</div><!-- clients-lines__column end -->
 
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/nsm.png" alt="NSM">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/nsm-red.png" alt="NSM">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/nsm.png" loading="lazy" alt="NSM">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/nsm-red.png" loading="lazy" alt="NSM">
 								</div>
 							</div><!-- clients-lines__column end -->
 
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/lancaster.png" alt="Lancaster">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/lancaster-red.png" alt="Lancaster">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/lancaster.png" loading="lazy" alt="Lancaster">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/lancaster-red.png" loading="lazy" alt="Lancaster">
 								</div>
 							</div><!-- clients-lines__column end -->
 
@@ -743,7 +743,7 @@
 										 </p>
 										<!-- anim-img-scale start -->
 										<div class="anim-img-scale testimonials-author border-radius-50perc">
-											<img class="anim-img-scale__inner" src="assets/images/clients/ps.png" alt="Powershift">
+											<img class="anim-img-scale__inner" src="assets/images/clients/ps.png" loading="lazy" alt="Powershift">
 										</div><!-- anim-img-scale end -->
 										<div class="margin-top-20 text-center">
 											<span class="headline-xxxs text-color-black">Powershift</span><br>
@@ -760,7 +760,7 @@
 										</p>
 										<!-- anim-img-scale start -->
 										<div class="anim-img-scale testimonials-author border-radius-50perc">
-											<img class="anim-img-scale__inner" src="assets/images/clients/ass timber.png" alt="Associate Timbers">
+											<img class="anim-img-scale__inner" src="assets/images/clients/ass timber.png" loading="lazy" alt="Associate Timbers">
 										</div><!-- anim-img-scale end -->
 										<div class="margin-top-20 text-center">
 											<span class="headline-xxxs text-color-black">Associate Timbers</span><br>
@@ -777,7 +777,7 @@
 										</p>
 										<!-- anim-img-scale start -->
 										<div class="anim-img-scale testimonials-author border-radius-50perc">
-											<img class="anim-img-scale__inner" src="assets/images/clients/arm-red.png" alt="AR Motors">
+											<img class="anim-img-scale__inner" src="assets/images/clients/arm-red.png" loading="lazy" alt="AR Motors">
 										</div><!-- anim-img-scale end -->
 										<div class="margin-top-20 text-center">
 											<span class="headline-xxxs text-color-black">AR Motors</span><br>
@@ -794,7 +794,7 @@
 										</p>
 										<!-- anim-img-scale start -->
 										<div class="anim-img-scale testimonials-author border-radius-50perc">
-											<img class="anim-img-scale__inner" src="assets/images/clients/cpg-red.png" alt="Career Point Global">
+											<img class="anim-img-scale__inner" src="assets/images/clients/cpg-red.png" loading="lazy" alt="Career Point Global">
 										</div><!-- anim-img-scale end -->
 										<div class="margin-top-20 text-center">
 											<span class="headline-xxxs text-color-black">Career Point Global</span><br>
@@ -853,7 +853,7 @@
 								<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
-											<img class="img-hover-scale" src="assets/images/posts/refine-marketing/vertical-target.jpg" alt="Post">
+											<img class="img-hover-scale" src="assets/images/posts/refine-marketing/vertical-target.jpg" loading="lazy" alt="Post">
 										</div>
 									</div>
 								</a>
