--- a/services.html
+++ b/services.html
@@ -61,7 +61,7 @@
 	<body class="preloader cursor-anim-enable landing-page">
 		<!-- preloader-loading start -->
 		<div class="preloader__logoload-box">
-			<img class="preloader__logo" src="assets/images/logo/logo-white.png" alt="logo">
+			<img class="preloader__logo" src="assets/images/logo/logo-white.png" loading="lazy" alt="logo">
 			<div class="preloader__pulse"></div>
 		</div><!-- preloader-loading end -->
 
@@ -120,8 +120,8 @@
 			<div class="header-logo js-midnight-color js-headroom">
 				<div class="hidden-box">
 					<a href="index.html" class="header-logo__box js-pointer-large js-animsition-link">
-						<img class="header-logo__img white" src="assets/images/logo/logo-white.png" alt="logo">
-						<img class="header-logo__img black" src="assets/images/logo/logo-black.png" alt="logo">
+						<img class="header-logo__img white" src="assets/images/logo/logo-white.png" loading="lazy" alt="logo">
+						<img class="header-logo__img black" src="assets/images/logo/logo-black.png" loading="lazy" alt="logo">
 					</a>
 				</div>
 			</div><!-- logo end -->
@@ -373,7 +373,7 @@
 							<div class="six-columns padding-top-30">
 								<div class="anim-img-reveal js-scrollanim">
 									<div class="anim-img-reveal__hidden">
-										<img class="anim-img-reveal__scale" src="https://images.pexels.com/photos/57690/pexels-photo-57690.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Graphic Designing">
+										<img class="anim-img-reveal__scale" src="https://images.pexels.com/photos/57690/pexels-photo-57690.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" loading="lazy" alt="Graphic Designing">
 										<!-- <img class="anim-img-reveal__scale" src="assets/images/team/team_teachers/photo-of-man-using-smartphone-3183191.jpg" alt="Henry Matthews"> -->
 									</div>
 								</div>
@@ -411,7 +411,7 @@
 							<div class="six-columns padding-top-30">
 								<div class="anim-img-reveal js-scrollanim">
 									<div class="anim-img-reveal__hidden">
-										<img class="anim-img-reveal__scale" src="https://images.unsplash.com/photo-1432888622747-4eb9a8efeb07?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1053&q=80" alt="Digital Marketing">
+										<img class="anim-img-reveal__scale" src="https://images.unsplash.com/photo-1432888622747-4eb9a8efeb07?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1053&q=80" loading="lazy" alt="Digital Marketing">
 										<!-- <img class="anim-img-reveal__scale" src="assets/images/team/team_teachers/woman-in-white-button-up-shirt-standing-beside-black-wall-3184400.jpg" alt="Gloria Thayer"> -->
 									</div>
 								</div>
@@ -423,7 +423,7 @@
 							<div class="six-columns padding-top-30">
 								<div class="anim-img-reveal js-scrollanim">
 									<div class="anim-img-reveal__hidden">
-										<img class="anim-img-reveal__scale" src="https://images.unsplash.com/photo-1600132806608-231446b2e7af?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NHx8d2ViJTIwZGVzaWdufGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Web Design">
+										<img class="anim-img-reveal__scale" src="https://images.unsplash.com/photo-1600132806608-231446b2e7af?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NHx8d2ViJTIwZGVzaWdufGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" loading="lazy" alt="Web Design">
 									</div>
 								</div>
 							</div>
@@ -460,7 +460,7 @@
 							<div class="six-columns padding-top-30">
 								<div class="anim-img-reveal js-scrollanim">
 									<div class="anim-img-reveal__hidden">
-										<img class="anim-img-reveal__scale" src="https://images.pexels.com/photos/699122/pexels-photo-699122.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="App Development">
+										<img class="anim-img-reveal__scale" src="https://images.pexels.com/photos/699122/pexels-photo-699122.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" loading="lazy" alt="App Development">
 									</div>
 								</div>
 							</div>
@@ -471,7 +471,7 @@
 							<div class="six-columns padding-top-30">
 								<div class="anim-img-reveal js-scrollanim">
 									<div class="anim-img-reveal__hidden">
-										<img class="anim-img-reveal__scale" src="https://images.unsplash.com/photo-1525969400584-bdd69c615bfc?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" alt="Ad Production">
+										<img class="anim-img-reveal__scale" src="https://images.unsplash.com/photo-1525969400584-bdd69c615bfc?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" loading="lazy" alt="Ad Production">
 									</div>
 								</div>
 							</div>
@@ -508,7 +508,7 @@
 							<div class="six-columns padding-top-30">
 								<div class="anim-img-reveal js-scrollanim">
 									<div class="anim-img-reveal__hidden">
-										<img class="anim-img-reveal__scale" src="https://images.unsplash.com/photo-1570215171323-4ec328f3f5fa?ixid=MXwxMjA3fDB8MHxzZWFyY2h8OHx8c29mdHdhcmV8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Software Solutions">
+										<img class="anim-img-reveal__scale" src="https://images.unsplash.com/photo-1570215171323-4ec328f3f5fa?ixid=MXwxMjA3fDB8MHxzZWFyY2h8OHx8c29mdHdhcmV8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" loading="lazy" alt="Software Solutions">
 									</div>
 								</div>
 							</div>
@@ -532,7 +532,7 @@
 				<div class="container padding-top-bottom-120">
 					<!-- footer-logo start -->
 					<div class="footer-logo footer-logo-desktop-hidden padding-bottom-90">
-						<img class="footer-logo__img" src="assets/images/logo/logo-white.png" alt="logo">
+						<img class="footer-logo__img" src="assets/images/logo/logo-white.png" loading="lazy" alt="logo">
 					</div><!-- footer-logo end -->
 
 					<!-- flex-container start -->
