--- a/Revolution-in-digital-Space.html
+++ b/Revolution-in-digital-Space.html
@@ -61,7 +61,7 @@
 	<body class="preloader cursor-anim-enable landing-page">
 		<!-- preloader-loading start -->
 		<div class="preloader__logoload-box">
-			<img class="preloader__logo" src="assets/images/logo/logo-white.png" alt="logo">
+			<img class="preloader__logo" src="assets/images/logo/logo-white.png" loading="lazy" alt="logo">
 			<div class="preloader__pulse"></div>
 		</div><!-- preloader-loading end -->
 
@@ -120,8 +120,8 @@
 			<div class="header-logo js-midnight-color js-headroom">
 				<div class="hidden-box">
 					<a href="index.html" class="header-logo__box js-pointer-large js-animsition-link">
-						<img class="header-logo__img white" src="assets/images/logo/logo-white.png" alt="logo">
-						<img class="header-logo__img black" src="assets/images/logo/logo-black.png" alt="logo">
+						<img class="header-logo__img white" src="assets/images/logo/logo-white.png" loading="lazy" alt="logo">
+						<img class="header-logo__img black" src="assets/images/logo/logo-black.png" loading="lazy" alt="logo">
 					</a>
 				</div>
 			</div><!-- logo end -->
@@ -436,7 +436,7 @@
 								</div>
 								<div class="padding-top-30">
 									<div class="pos-rel">
-										<img src="assets/images/posts/digital-revolution/dr.jpg" alt="digital-revolution">
+										<img src="assets/images/posts/digital-revolution/dr.jpg" loading="lazy" alt="digital-revolution">
 										<!-- bg-overlay -->
 										<div class="bg-overlay-black"></div>
 										<!-- <a href="https://www.youtube.com/watch?v=hitNXU4PoRU" class="play-button js-popup-youtube js-pointer-large">
@@ -530,7 +530,7 @@
 								</div>
 								<div class="padding-top-30">
 									<div class="pos-rel">
-										<img src="assets/images/posts/digital-revolution/dr2.jpg" alt="digital-revolution">
+										<img src="assets/images/posts/digital-revolution/dr2.jpg" loading="lazy" alt="digital-revolution">
 										<!-- bg-overlay -->
 										<div class="bg-overlay-black"></div>
 										<!-- <a href="https://www.youtube.com/watch?v=hitNXU4PoRU" class="play-button js-popup-youtube js-pointer-large">
@@ -620,7 +620,7 @@
 				<div class="container padding-top-bottom-120">
 					<!-- footer-logo start -->
 					<div class="footer-logo footer-logo-desktop-hidden padding-bottom-90">
-						<img class="footer-logo__img" src="assets/images/logo/logo-white.png" alt="logo">
+						<img class="footer-logo__img" src="assets/images/logo/logo-white.png" loading="lazy" alt="logo">
 					</div><!-- footer-logo end -->
 
 					<!-- flex-container start -->
