--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 
 		<!-- preloader-loading start -->
 		<div class="preloader__logoload-box">
-			<img class="preloader__logo" src="assets/images/logo/logo-white.png" alt="logo">
+			<img class="preloader__logo" src="assets/images/logo/logo-white.png" loading="lazy" alt="logo">
 			<div class="preloader__pulse"></div>
 		</div><!-- preloader-loading end -->
 
@@ -136,8 +136,8 @@
 			<div class="header-logo js-midnight-color js-headroom">
 				<div class="hidden-box">
 					<a href="index.html" class="header-logo__box js-pointer-large js-animsition-link">
-						<img class="header-logo__img white" src="assets/images/logo/logo-white.png" alt="logo">
-						<img class="header-logo__img black" src="assets/images/logo/logo-black.png" alt="logo">
+						<img class="header-logo__img white" src="assets/images/logo/logo-white.png" loading="lazy" alt="logo">
+						<img class="header-logo__img black" src="assets/images/logo/logo-black.png" loading="lazy" alt="logo">
 					</a>
 				</div>
 			</div><!-- logo end -->
@@ -404,21 +404,21 @@
 						<!-- column start -->
 						<div class="four-columns column-100-100 padding-top-60">
 							<a href="assets/images/projects/drone/01.jpg" class="column-l-r-margin-10-999 d-block js-pointer-zoom js-photo-popup">
-								<img src="assets/images/projects/drone/01.jpg" alt="project image">
+								<img src="assets/images/projects/drone/01.jpg" loading="lazy" alt="project image">
 							</a>
 						</div><!-- column end -->
 
 						<!-- column start -->
 						<div class="four-columns column-100-100 padding-top-60">
 							<a href="assets/images/projects/drone/02.jpg" class="column-l-r-margin-10-999 d-block js-pointer-zoom js-photo-popup">
-								<img src="assets/images/projects/drone/02.jpg" alt="project image">
+								<img src="assets/images/projects/drone/02.jpg" loading="lazy" alt="project image">
 							</a>
 						</div><!-- column end -->
 
 						<!-- column start -->
 						<div class="four-columns column-100-100 padding-top-60">
 							<a href="assets/images/projects/drone/03.jpg" class="column-l-r-margin-10-999 d-block js-pointer-zoom js-photo-popup">
-								<img src="assets/images/projects/drone/03.jpg" alt="project image">
+								<img src="assets/images/projects/drone/03.jpg" loading="lazy" alt="project image">
 							</a>
 						</div><!-- column end -->
 					</div><!-- flex-container end -->
@@ -535,7 +535,7 @@
 						</div>
 
 						<div class="padding-top-30">
-							<img src="assets/images/about/about.jpg" alt="about-us">
+							<img src="assets/images/about/about.jpg" loading="lazy" alt="about-us">
 						</div>
 					</article><!-- entry-content end -->
 
@@ -555,7 +555,7 @@
 				<div class="container padding-top-bottom-120">
 					<!-- footer-logo start -->
 					<div class="footer-logo footer-logo-desktop-hidden padding-bottom-90">
-						<img class="footer-logo__img" src="assets/images/logo/logo-white.png" alt="logo">
+						<img class="footer-logo__img"loading="lazy"  src="assets/images/logo/logo-white.png" alt="logo">
 					</div><!-- footer-logo end -->
 
 					<!-- flex-container start -->
