--- a/academy.html
+++ b/academy.html
@@ -77,7 +77,7 @@
 
 		<!-- preloader-loading start -->
 		<div class="preloader__logoload-box">
-			<img class="preloader__logo " src="assets/images/logo/logo-white.png" alt="logo">
+			<img class="preloader__logo " src="assets/images/logo/logo-white.png" loading="lazy" alt="logo">
 			<div class="preloader__pulse"></div>
 		</div><!-- preloader-loading end -->
 
@@ -136,8 +136,8 @@
 			<div class="header-logo js-midnight-color js-headroom">
 				<div class="hidden-box">
 					<a href="index.html" class="header-logo__box js-pointer-large js-animsition-link">
-						<img class="header-logo__img white" src="assets/images/logo/logo-white.png" alt="logo">
-						<img class="header-logo__img black" src="assets/images/logo/logo-black.png" alt="logo">
+						<img class="header-logo__img white" src="assets/images/logo/logo-white.png" loading="lazy" alt="logo">
+						<img class="header-logo__img black" src="assets/images/logo/logo-black.png" loading="lazy" alt="logo">
 					</a>
 				</div>
 			</div><!-- logo end -->
@@ -486,7 +486,7 @@
 					<div class="flex-container flex-align-center padding-top-60">
 						<!-- column start -->
 						<div class="five-columns column-50-100 padding-top-30">
-							<img src="assets/images/projects/courses/graphic-tablet-and-open-book-with-drawing-located-on-marble-3850229.jpg" alt="digital-marketing">
+							<img src="assets/images/projects/courses/graphic-tablet-and-open-book-with-drawing-located-on-marble-3850229.jpg" loading="lazy" alt="digital-marketing">
 
 						</div><!-- column end -->
 						<!-- column start -->
@@ -541,7 +541,7 @@
 						<!-- column start -->
 						<div class="five-columns column-50-100 padding-top-30">
 							<a href="web-development" class="d-block anim-overlay js-scrollanim js-pointer-zoom js-photo-popup">
-								<img src="assets/images/projects/courses/man-using-laptop-on-table-against-white-background-257897.jpg" alt="web-development">
+								<img src="assets/images/projects/courses/man-using-laptop-on-table-against-white-background-257897.jpg" loading="lazy" alt="web-development">
 							</a>
 						</div><!-- column end -->
 					</div><!-- flex-container end -->
@@ -551,7 +551,7 @@
 						<!-- column start -->
 						<div class="five-columns column-50-100 padding-top-30">
 							<a href="graphic-design" class="d-block anim-overlay js-scrollanim js-pointer-zoom js-photo-popup">
-								<img src="assets/images/projects/courses/notebook-with-smartphone-showing-photo-gallery-app-on-screen-3850246.jpg" alt="graphic-designing">
+								<img src="assets/images/projects/courses/notebook-with-smartphone-showing-photo-gallery-app-on-screen-3850246.jpg" loading="lazy" alt="graphic-designing">
 							</a>
 						</div><!-- column end -->
 						<!-- column start -->
@@ -594,7 +594,7 @@
 				<div class="container padding-top-bottom-120">
 					<!-- footer-logo start -->
 					<div class="footer-logo footer-logo-desktop-hidden padding-bottom-90">
-						<img class="footer-logo__img" src="assets/images/logo/logo-white.png" alt="logo">
+						<img class="footer-logo__img" src="assets/images/logo/logo-white.png" loading="lazy" alt="logo">
 					</div><!-- footer-logo end -->
 
 					<!-- flex-container start -->
