--- a/client.html
+++ b/client.html
@@ -60,7 +60,7 @@
 	<body class="preloader cursor-anim-enable landing-page">
 		<!-- preloader-loading start -->
 		<div class="preloader__logoload-box">
-			<img class="preloader__logo" src="assets/images/logo/logo-white.png" alt="logo">
+			<img class="preloader__logo" src="assets/images/logo/logo-white.png" loading="lazy" alt="logo">
 			<div class="preloader__pulse"></div>
 		</div><!-- preloader-loading end -->
 
@@ -119,8 +119,8 @@
 			<div class="header-logo js-midnight-color js-headroom">
 				<div class="hidden-box">
 					<a href="index.html" class="header-logo__box js-pointer-large js-animsition-link">
-						<img class="header-logo__img white" src="assets/images/logo/logo-white.png" alt="logo">
-						<img class="header-logo__img black" src="assets/images/logo/logo-black.png" alt="logo">
+						<img class="header-logo__img white" src="assets/images/logo/logo-white.png" loading="lazy" alt="logo">
+						<img class="header-logo__img black" src="assets/images/logo/logo-black.png" loading="lazy" alt="logo">
 					</a>
 				</div>
 			</div><!-- logo end -->
@@ -353,7 +353,7 @@
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
 								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/clients/Arm.jpg" alt="ARM">
+									<img class="img-hover-scale" src="assets/images/clients/Arm.jpg" loading="lazy" alt="ARM">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
 									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Don't panic. Don't panic.<br>Don't panic.</h3> -->
@@ -365,7 +365,7 @@
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
 								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/clients/ast.jpg" alt="ast">
+									<img class="img-hover-scale" src="assets/images/clients/ast.jpg" loading="lazy" alt="ast">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
 									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Do red cars cost<br>more to insure</h3> -->
@@ -377,7 +377,7 @@
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
 								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/clients/automagic.jpg" alt="client">
+									<img class="img-hover-scale" src="assets/images/clients/automagic.jpg" loading="lazy" alt="client">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
 									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Modern architecture and<br>design society</h3> -->
@@ -389,7 +389,7 @@
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
 								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/clients/cpg.jpg" alt="CPG">
+									<img class="img-hover-scale" src="assets/images/clients/cpg.jpg" loading="lazy" alt="CPG">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
 									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Home decor and furniture<br>stores near me</h3> -->
@@ -401,7 +401,7 @@
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
 								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/clients/cnn.jpg" alt="CNN">
+									<img class="img-hover-scale" src="assets/images/clients/cnn.jpg" loading="lazy" alt="CNN">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
 									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Columns in modern<br>and classical architecture</h3> -->
@@ -413,7 +413,7 @@
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
 								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/clients/edu wings.jpg" alt="Eduwings">
+									<img class="img-hover-scale" src="assets/images/clients/edu wings.jpg" loading="lazy" alt="Eduwings">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
 									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Best electronic music festivals<br>in the world</h3> -->
@@ -425,7 +425,7 @@
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
 								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/clients/carclub.jpg" alt="Carclub">
+									<img class="img-hover-scale" src="assets/images/clients/carclub.jpg" loading="lazy" alt="Carclub">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
 									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Good morning!<br>Have a nice day</h3> -->
@@ -437,7 +437,7 @@
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
 								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/clients/lancaster.jpg" alt="Lancaster">
+									<img class="img-hover-scale" src="assets/images/clients/lancaster.jpg" loading="lazy" alt="Lancaster">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
 									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Selfie culture<br>and contemporary art</h3> -->
@@ -449,7 +449,7 @@
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
 								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/clients/leads.jpg" alt="Leadz">
+									<img class="img-hover-scale" src="assets/images/clients/leads.jpg" loading="lazy" alt="Leadz">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
 									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Second hand photography<br>studio equipment</h3> -->
@@ -461,7 +461,7 @@
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
 								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/clients/maithri.jpg" alt="Maithri">
+									<img class="img-hover-scale" src="assets/images/clients/maithri.jpg" loading="lazy" alt="Maithri">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
 									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Nature photography hashtags<br>for instagram</h3> -->
@@ -473,7 +473,7 @@
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
 								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/clients/nationalsawmill.jpg" alt="NationalSawmill">
+									<img class="img-hover-scale" src="assets/images/clients/nationalsawmill.jpg" loading="lazy" alt="NationalSawmill">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
 									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Home recording studio<br>interior design</h3> -->
@@ -485,7 +485,7 @@
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
 								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/clients/powershift.jpg" alt="Powershift">
+									<img class="img-hover-scale" src="assets/images/clients/powershift.jpg" loading="lazy" alt="Powershift">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
 									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Music equipment<br>to record at home</h3> -->
@@ -495,7 +495,7 @@
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
 								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/clients/kanchi.jpg" alt="Kanchi">
+									<img class="img-hover-scale" src="assets/images/clients/kanchi.jpg" loading="lazy" alt="Kanchi">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
 									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Home recording studio<br>interior design</h3> -->
@@ -505,7 +505,7 @@
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
 								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/clients/dgip.jpg" alt="Kanchi">
+									<img class="img-hover-scale" src="assets/images/clients/dgip.jpg" loading="lazy" alt="DGIP">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
 									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Home recording studio<br>interior design</h3> -->
@@ -515,7 +515,7 @@
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
 								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/clients/powershiftms.jpg" alt="Kanchi">
+									<img class="img-hover-scale" src="assets/images/clients/powershiftms.jpg" loading="lazy" alt="PowershiftMoterSport">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
 									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Home recording studio<br>interior design</h3> -->
@@ -538,7 +538,7 @@
 				<div class="container padding-top-bottom-120">
 					<!-- footer-logo start -->
 					<div class="footer-logo footer-logo-desktop-hidden padding-bottom-90">
-						<img class="footer-logo__img" src="assets/images/logo/logo-white.png" alt="logo">
+						<img class="footer-logo__img" src="assets/images/logo/logo-white.png" loading="lazy" alt="logo">
 					</div><!-- footer-logo end -->
 
 					<!-- flex-container start -->
