--- a/the-future-is-multi-shaped.html
+++ b/the-future-is-multi-shaped.html
@@ -55,7 +55,7 @@
 	<body class="preloader cursor-anim-enable landing-page">
 		<!-- preloader-loading start -->
 		<div class="preloader__logoload-box">
-			<img class="preloader__logo" src="assets/images/logo/logo-white.png" alt="logo">
+			<img class="preloader__logo" src="assets/images/logo/logo-white.png" loading="lazy" alt="logo">
 			<div class="preloader__pulse"></div>
 		</div><!-- preloader-loading end -->
 
@@ -114,8 +114,8 @@
 			<div class="header-logo js-midnight-color js-headroom">
 				<div class="hidden-box">
 					<a href="index.html" class="header-logo__box js-pointer-large js-animsition-link">
-						<img class="header-logo__img white" src="assets/images/logo/logo-white.png" alt="logo">
-						<img class="header-logo__img black" src="assets/images/logo/logo-black.png" alt="logo">
+						<img class="header-logo__img white" src="assets/images/logo/logo-white.png" loading="lazy" alt="logo">
+						<img class="header-logo__img black" src="assets/images/logo/logo-black.png" loading="lazy" alt="logo">
 					</a>
 				</div>
 			</div><!-- logo end -->
@@ -421,14 +421,14 @@
 													<!-- column start -->
 													<div class="six-columns padding-top-20">
 														<div class="column-r-margin-10 anim-overlay js-scrollanim">
-															<img src="assets/images/posts/multi-shaped/multishape03.jpg" alt="Multi-shaped">
+															<img src="assets/images/posts/multi-shaped/multishape03.jpg" loading="lazy" alt="Multi-shaped">
 														</div>
 													</div><!-- column end -->
 
 													<!-- column start -->
 													<div class="six-columns padding-top-20">
 														<div class="column-l-margin-10 anim-overlay js-scrollanim">
-															<img src="assets/images/posts/multi-shaped/multishape04.jpg" alt="Multi-shaped">
+															<img src="assets/images/posts/multi-shaped/multishape04.jpg" loading="lazy" alt="Multi-shaped">
 														</div>
 													</div><!-- column end -->
 												</div><!-- flex-container end -->
@@ -485,7 +485,7 @@
 
 						<div class="padding-top-30">
 							<div class="pos-rel">
-								<img src="assets/images/posts/multi-shaped/multishape01.jpg" alt="Multi-shaped">
+								<img src="assets/images/posts/multi-shaped/multishape01.jpg" loading="lazy" alt="Multi-shaped">
 								<!-- bg-overlay -->
 								<div class="bg-overlay-black"></div>
 								<!-- <a href="https://www.youtube.com/watch?v=hitNXU4PoRU" class="play-button js-popup-youtube js-pointer-large">
@@ -506,7 +506,7 @@
 							</div>
 
 							<div class="padding-top-30">
-								<img src="assets/images/posts/multi-shaped/multishape02.jpg" alt="Multi-shaped">
+								<img src="assets/images/posts/multi-shaped/multishape02.jpg" loading="lazy" alt="Multi-shaped">
 							</div>
 
 					</article><!-- entry-content end -->
@@ -589,7 +589,7 @@
 				<div class="container padding-top-bottom-120">
 					<!-- footer-logo start -->
 					<div class="footer-logo footer-logo-desktop-hidden padding-bottom-90">
-						<img class="footer-logo__img" src="assets/images/logo/logo-white.png" alt="logo">
+						<img class="footer-logo__img" src="assets/images/logo/logo-white.png" loading="lazy" alt="logo">
 					</div><!-- footer-logo end -->
 
 					<!-- flex-container start -->
