--- a/top-choices-in-web-hosting.html
+++ b/top-choices-in-web-hosting.html
@@ -56,7 +56,7 @@
 	<body class="preloader cursor-anim-enable landing-page">
 		<!-- preloader-loading start -->
 		<div class="preloader__logoload-box">
-			<img class="preloader__logo" src="assets/images/logo/logo-white.png" alt="logo">
+			<img class="preloader__logo" src="assets/images/logo/logo-white.png" loading="lazy" alt="logo">
 			<div class="preloader__pulse"></div>
 		</div><!-- preloader-loading end -->
 
@@ -115,8 +115,8 @@
 			<div class="header-logo js-midnight-color js-headroom">
 				<div class="hidden-box">
 					<a href="index.html" class="header-logo__box js-pointer-large js-animsition-link">
-						<img class="header-logo__img white" src="assets/images/logo/logo-white.png" alt="logo">
-						<img class="header-logo__img black" src="assets/images/logo/logo-black.png" alt="logo">
+						<img class="header-logo__img white" src="assets/images/logo/logo-white.png" loading="lazy" alt="logo">
+						<img class="header-logo__img black" src="assets/images/logo/logo-black.png" loading="lazy" alt="logo">
 					</a>
 				</div>
 			</div><!-- logo end -->
@@ -403,7 +403,7 @@
 								<a href="#" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
-											<img class="img-hover-scale" src="assets/images/posts/hosting/bluehost.jpg" alt="top-choices-in-web-hosting">
+											<img class="img-hover-scale" src="assets/images/posts/hosting/bluehost.jpg" loading="lazy" alt="top-choices-in-web-hosting">
 										</div>
 									</div>
 								</a>
@@ -474,7 +474,7 @@
 								<a href="#0" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
-											<img class="img-hover-scale" src="assets/images/posts/hosting/hostinger.jpg" alt="top-choices-in-web-hosting">
+											<img class="img-hover-scale" src="assets/images/posts/hosting/hostinger.jpg" loading="lazy"  alt="top-choices-in-web-hosting">
 										</div>
 									</div>
 								</a>
@@ -487,7 +487,7 @@
 								<a href="#" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
-											<img class="img-hover-scale" src="assets/images/posts/hosting/siteground.jpg" alt="top-choices-in-web-hosting">
+											<img class="img-hover-scale" src="assets/images/posts/hosting/siteground.jpg" loading="lazy" alt="top-choices-in-web-hosting">
 										</div>
 									</div>
 								</a>
@@ -609,7 +609,7 @@
 				<div class="container padding-top-bottom-120">
 					<!-- footer-logo start -->
 					<div class="footer-logo footer-logo-desktop-hidden padding-bottom-90">
-						<img class="footer-logo__img" src="assets/images/logo/logo-white.png" alt="logo">
+						<img class="footer-logo__img" src="assets/images/logo/logo-white.png" loading="lazy" alt="logo">
 					</div><!-- footer-logo end -->
 
 					<!-- flex-container start -->
