--- a/web-development.html
+++ b/web-development.html
@@ -33,7 +33,7 @@
 	<body class="preloader cursor-anim-enable landing-page">
 		<!-- preloader-loading start -->
 		<div class="preloader__logoload-box">
-			<img class="preloader__logo" src="assets/images/logo/logo-white.png" alt="logo">
+			<img class="preloader__logo" src="assets/images/logo/logo-white.png" loading="lazy" alt="logo">
 			<div class="preloader__pulse"></div>
 		</div><!-- preloader-loading end -->
 
@@ -92,8 +92,8 @@
 			<div class="header-logo js-midnight-color js-headroom">
 				<div class="hidden-box">
 					<a href="index.html" class="header-logo__box js-pointer-large js-animsition-link">
-						<img class="header-logo__img white" src="assets/images/logo/logo-white.png" alt="logo">
-						<img class="header-logo__img black" src="assets/images/logo/logo-black.png" alt="logo">
+						<img class="header-logo__img white" src="assets/images/logo/logo-white.png" loading="lazy" alt="logo">
+						<img class="header-logo__img black" src="assets/images/logo/logo-black.png" loading="lazy" alt="logo">
 					</a>
 				</div>
 			</div><!-- logo end -->
@@ -574,7 +574,7 @@
 				<div class="container padding-top-bottom-120">
 					<!-- footer-logo start -->
 					<div class="footer-logo footer-logo-desktop-hidden padding-bottom-90">
-						<img class="footer-logo__img" src="assets/images/logo/logo-white.png" alt="logo">
+						<img class="footer-logo__img" src="assets/images/logo/logo-white.png" loading="lazy" alt="logo">
 					</div><!-- footer-logo end -->
 
 					<!-- flex-container start -->
