social medias added blog

--- a/the-future-is-multi-shaped.html
+++ b/the-future-is-multi-shaped.html
@@ -352,7 +352,7 @@
 								<ul class="list list_center list_row list_margin-30px">
 									<li class="list__item">
 										<span class="anim-text-double-fill invert" data-text="By: Abhijith Pramod">
-											<a href="#" class="subhead-xxxs text-color-8a8a8a text-hover-to-red js-pointer-small">By: Abhijith Pramod</a>
+											<a href="https://www.linkedin.com/in/abhijith-pramod-b2973619a/" target="_blank" class="subhead-xxxs text-color-8a8a8a text-hover-to-red js-pointer-small">By: Abhijith Pramod</a>
 										</span>
 									</li>
 									<li class="list__item">
@@ -363,17 +363,17 @@
 								</ul>
 								<ul class="list list_row list_center padding-top-20">
 									<li class="list__item">
-										<a href="https://www.instagram.com/__kaz_____/" class="icon-overlay-btn white js-pointer-large">
+										<a href="https://www.instagram.com/__kaz_____/" target="_blank" class="icon-overlay-btn white js-pointer-large">
 											<i class="icon-overlay-btn__inner fab fa-instagram"></i>
 										</a>
 									</li>
 									<li class="list__item">
-										<a href="https://www.linkedin.com/in/abhijith-pramod-b2973619a/" class="icon-overlay-btn white js-pointer-large">
+										<a href="https://www.linkedin.com/in/abhijith-pramod-b2973619a/" target="_blank" class="icon-overlay-btn white js-pointer-large">
 											<i class="icon-overlay-btn__inner fab fa-linkedin"></i>
 										</a>
 									</li>
 									<li class="list__item">
-										<a href="#" class="icon-overlay-btn white js-pointer-large">
+										<a href="https://www.facebook.com/abhi.a.abhi.3" target="_blank" class="icon-overlay-btn white js-pointer-large">
 											<i class="icon-overlay-btn__inner fab fa-facebook-f"></i>
 										</a>
 									</li>
