--- a/top-choices-in-web-hosting.html
+++ b/top-choices-in-web-hosting.html
@@ -353,7 +353,7 @@
 								<ul class="list list_center list_row list_margin-30px">
 									<li class="list__item">
 										<span class="anim-text-double-fill invert" data-text="By: Amal Prakash">
-											<a href="#" class="subhead-xxxs text-color-8a8a8a text-hover-to-red js-pointer-small">By: Amal Prakash</a>
+											<a href="https://www.linkedin.com/in/amal-prakash-673b64207/" target="_blank" class="subhead-xxxs text-color-8a8a8a text-hover-to-red js-pointer-small">By: Amal Prakash</a>
 										</span>
 									</li>
 									<li class="list__item">
@@ -364,17 +364,17 @@
 								</ul>
 								<ul class="list list_row list_center padding-top-20">
 									<li class="list__item">
-										<a href="#" class="icon-overlay-btn white js-pointer-large">
+										<a href="https://www.instagram.com/i_m_ml_07/" class="icon-overlay-btn white js-pointer-large" target="_blank">
 											<i class="icon-overlay-btn__inner fab fa-instagram"></i>
 										</a>
 									</li>
 									<li class="list__item">
-										<a href="#" class="icon-overlay-btn white js-pointer-large">
+										<a href="https://www.linkedin.com/in/amal-prakash-673b64207/" class="icon-overlay-btn white js-pointer-large" target="_blank">
 											<i class="icon-overlay-btn__inner fab fa-linkedin"></i>
 										</a>
 									</li>
 									<li class="list__item">
-										<a href="#" class="icon-overlay-btn white js-pointer-large">
+										<a href="https://www.facebook.com/mldo47" class="icon-overlay-btn white js-pointer-large" target="_blank">
 											<i class="icon-overlay-btn__inner fab fa-facebook-f"></i>
 										</a>
 									</li>
