--- a/Three-Essential-Digital-Marketing-Channels-In-2020.html
+++ b/Three-Essential-Digital-Marketing-Channels-In-2020.html
@@ -352,7 +352,7 @@
 								<ul class="list list_center list_row list_margin-30px">
 									<li class="list__item">
 										<span class="anim-text-double-fill invert" data-text="By: Abdul Wasith">
-											<a href="#" class="subhead-xxxs text-color-8a8a8a text-hover-to-red js-pointer-small">By: Abdul Wasith</a>
+											<a href="https://www.linkedin.com/in/abdul-wasith-4245a7171/" target="_blank" class="subhead-xxxs text-color-8a8a8a text-hover-to-red js-pointer-small">By: Abdul Wasith</a>
 										</span>
 									</li>
 									<li class="list__item">
@@ -363,17 +363,17 @@
 								</ul>
 								<ul class="list list_row list_center padding-top-20">
 									<li class="list__item">
-										<a href="#" class="icon-overlay-btn white js-pointer-large">
+										<a href="https://www.instagram.com/_wacheee_/" class="icon-overlay-btn white js-pointer-large" target="_blank">
 											<i class="icon-overlay-btn__inner fab fa-instagram"></i>
 										</a>
 									</li>
 									<li class="list__item">
-										<a href="#" class="icon-overlay-btn white js-pointer-large">
+										<a href="https://www.linkedin.com/in/abdul-wasith-4245a7171/" class="icon-overlay-btn white js-pointer-large" target="_blank">
 											<i class="icon-overlay-btn__inner fab fa-linkedin"></i>
 										</a>
 									</li>
 									<li class="list__item">
-										<a href="#" class="icon-overlay-btn white js-pointer-large">
+										<a href="https://www.facebook.com/wasith1" class="icon-overlay-btn white js-pointer-large" target="_blank">
 											<i class="icon-overlay-btn__inner fab fa-facebook-f"></i>
 										</a>
 									</li>
